--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
     "name": "Super Nintendo Emulator (snes9x)",
     "description": "Super Nintendo Emulator",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "minimum_chrome_version": "44",
     "manifest_version": 2,
     "offline_enabled": true,
     "file_handlers": {
         "any": {
             "extensions": [
-                "smc"
+                "smc", "sfc"
             ]
         }
     },
